chore: add prettier and lint to template

--- a/template/src/Component.stories.tsx.hbs
+++ b/template/src/Component.stories.tsx.hbs
@@ -10,6 +10,4 @@ export default {
 const Template = (args) => <{{pascalCase name}} {...args} />;
 
 export const Simple = Template.bind({});
-Simple.args = {
-};
-
+Simple.args = {};
