--- a/template/src/index.ts.hbs
+++ b/template/src/index.ts.hbs
@@ -1,2 +1,2 @@
-export { {{pascalCase name}} } from "./{{Name}}";
-export { {{pascalCase name}}Props } from "./{{Name}}";
+export { {{pascalCase name}} } from './{{pascalCase name}}';
+export { {{pascalCase name}}Props } from './{{pascalCase name}}';
