--- a/template/src/Component.tsx.hbs
+++ b/template/src/Component.tsx.hbs
@@ -1,6 +1,5 @@
-import React from "react";
+import React from 'react';
 
-type {{pascalCase name}}Props = {
-}
+export type {{pascalCase name}}Props = {};
 
 export const {{pascalCase name}} = ({ ...props }: {{pascalCase name}}Props) => <div />;
