chore: fix case types

--- a/template/package.json.hbs
+++ b/template/package.json.hbs
@@ -1,5 +1,5 @@
 {
-  "name": "@localitos/{{name}}",
+  "name": "@localitos/{{kebabCase name}}",
   "version": "0.0.19",
   "main": "index.ts",
   "license": "MIT",
