--- a/template/src/Component.test.tsx.hbs
+++ b/template/src/Component.test.tsx.hbs
@@ -3,7 +3,7 @@ import { render } from '@testing-library/react';
 import { {{pascalCase name}} } from './{{pascalCase name}}';
 
 describe('<{{pascalCase name}} />', () => {
-  it('renders {{name}}', () => {
+  it('renders correctly', () => {
     const { getByText } = render(<{{pascalCase name}} />);
   });
 });
