--- a/template/src/Component.test.tsx.hbs
+++ b/template/src/Component.test.tsx.hbs
@@ -1,9 +1,9 @@
 import React from 'react';
-import { render } from '@testing-library/react';
+import { render, screen } from '@testing-library/react';
 import { {{pascalCase name}} } from './{{pascalCase name}}';
 
 describe('<{{pascalCase name}} />', () => {
   it('renders correctly', () => {
-    const { getByText } = render(<{{pascalCase name}} />);
+    render(<{{pascalCase name}} />);
   });
 });
