chore: adjust story template, change start script

--- a/template/Component.stories.tsx.hbs
+++ b/template/Component.stories.tsx.hbs
@@ -4,7 +4,7 @@ import { {{pascalCase name}} } from './{{pascalCase name}}';
 
 export default {
   component: {{pascalCase name}},
-  title: '{{pascalCase name}}',
+  title: '{{pascalCase category}}/{{pascalCase name}}',
 } as ComponentMeta<typeof {{pascalCase name}}>;
 
 const Template: ComponentStory<typeof {{pascalCase name}}> = (args) => <{{pascalCase name}} {...args} />;
