--- a/template/Component.stories.tsx.hbs
+++ b/template/Component.stories.tsx.hbs
@@ -1,13 +1,13 @@
-import type { ComponentMeta, ComponentStory } from "@storybook/react";
+import type { Meta, StoryFn } from "@storybook/react";
 import React from 'react';
 import { {{pascalCase name}} } from './{{pascalCase name}}';
 
 export default {
   component: {{pascalCase name}},
   title: '{{pascalCase category}}/{{pascalCase name}}',
-} as ComponentMeta<typeof {{pascalCase name}}>;
+} as Meta<typeof {{pascalCase name}}>;
 
-const Template: ComponentStory<typeof {{pascalCase name}}> = (args) => <{{pascalCase name}} {...args} />;
+const Template: StoryFn<typeof {{pascalCase name}}> = (args) => <{{pascalCase name}} {...args} />;
 
 export const Simple = Template.bind({});
 Simple.args = {};
